Fix pages content alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,7 +32,7 @@
  }
 
 #add_button{
-  margin: 0px 0px 0px 100px;
+  margin: -50px 0px 0px 20px;
 }
 
 
@@ -51,10 +51,6 @@ a:link, a:visited, a:hover, a:active{
   margin-bottom: 20px
 }
 
-#buttons_div {
-  text-align: center;
-}
-
 .bottom-right-fixed {
   position:fixed;
   right: 20px;
@@ -66,4 +62,11 @@ a:link, a:visited, a:hover, a:active{
   text-align: center;
   margin-right: 0.5em;
   width: 11em;
+}
+
+.page_content_div{
+  width: 100%;
+  max-width: 650px;
+  margin-left: auto ;
+  margin-right: auto ;
 }
